# SpectralParareal

./: .gitignore  LICENSE  README.md  compute_err_vs_time.py  compute_error_bounds.py  compute_solutions.py  compute_time_table.py  experiments.py  heatsink.py  helpers.py  make_figures.sh  pararb.py  pymor_defaults.py  pyproject.toml  run_all.sh
figures/: fig_ex1_dir.tex  fig_ex1_dir_fou.tex  fig_ex1_max_errs.tex  fig_ex1_neu.tex  fig_ex1_solution.tex  fig_ex2_max_errs.tex  fig_ex2_solution_svals.tex  fig_ex3.tex  fig_ex3_ex4_eff.tex  fig_ex3_ex4_svals.tex  fig_ex3_solution.tex  fig_ex4.tex  fig_ex4_times.tex  shared_preamble.tex
heatsink_data/: convert_inp_to_vtu.py  heatsink_small.FCStd  heatsink_small.vtu
